p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app3
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  strategy: {}
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: app3
  name: app3
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app3
  type: ClusterIP
status:
  loadBalancer: {}
